# Minas-Tirith

./: Cargo.toml  Readme.md  justfile
migrations/: 20260625191427_schema_definition.down.sql  20260625191427_schema_definition.up.sql
src/: main.rs
src/database/: archive.rs
src/metadata/: common_metadata.rs  cover_generator.rs  crosseref.rs  image_cache.rs  mod.rs  openlibrary.rs  proxy.rs
src/schema/: item.rs
src/tui/: app.rs  event.rs  ui.rs
