[package]
name = "minastirith"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
image = "0.25.10"
ratatui = "0.30.2"
ratatui-explorer = "0.3.0"
ratatui-image = { version = "11.0.6", features = ["crossterm", "tokio", "image-defaults"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
rustix = "1.1.4"
serde = { version = "1.0.228", features = ["derive"] }
slug = "0.1.6"
sqlx = { version = "0.9.0", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
